Refactored and well structured code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,8 @@ Repository = "https://github.com/pallesai/trading_analyzer.git"
 Issues = "https://github.com/pallesai/trading_analyzer/issues"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["trading_analyzer*", "http_client*", "news*", "trading_api*"]
+where = ["src"]
+include = ["trading_analyzer*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -70,10 +70,7 @@ addopts = [
     "--strict-markers",
     "--strict-config",
     "--verbose",
-    "--cov=trading_analyzer",
-    "--cov=http_client",
-    "--cov=news",
-    "--cov=trading_api",
+    "--cov=src/trading_analyzer",
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-report=xml",
@@ -143,7 +140,7 @@ module = [
 ignore_missing_imports = true
 
 [tool.coverage.run]
-source = ["trading_analyzer", "http_client", "news", "trading_api"]
+source = ["src"]
 omit = [
     "*/tests/*",
     "*/test_*.py",
