--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
       run: |
         # Stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        # Use our setup.cfg configuration
+        flake8 . --count --statistics
     
     - name: Check code formatting with black
       run: |
@@ -51,12 +51,12 @@ jobs:
     
     - name: Type checking with mypy
       run: |
-        mypy . --ignore-missing-imports
+        mypy src/trading_analyzer --ignore-missing-imports --exclude="build|dist|venv|\.venv|\.git"
       continue-on-error: true  # Allow mypy to fail without breaking the build
     
     - name: Run tests with pytest
       run: |
-        pytest tests/ -v --cov=. --cov-report=xml --cov-report=html --cov-report=term-missing
+        pytest tests/ -v --cov=src/trading_analyzer --cov-report=xml --cov-report=html --cov-report=term-missing
     
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
